--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
+  <h1>My Custom Video Player</h1>
+  <video controls src="videos/gone.mp4" id="video" class="screen" poster="img/poster.png"></video>
 
 
+  <script src="script.js"></script>
 </body>
 
 </html>
