play/stop buttons using FontAwesome Library imported

--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> NOT NEEDED DUE TO IE NO BEING SUPPORTED-->
   <title>Custom Video Player</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"
-    integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="progress.css">
   <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
   <h1>My Custom Video Player</h1>
-  <video controls src="videos/gone.mp4" id="video" class="screen" poster="img/poster.png"></video>
+  <video src="videos/gone.mp4" id="video" class="screen" poster="img/poster.png"></video>
+  <div class="controls">
+    <button class="btn" id="play">
+      <i class="fa fa-play fa-2x"></i>
+    </button>
+    <button class="btn" id="stop">
+      <i class="fa fa-play fa-2x"></i>
+    </button>
+  </div>
 
-
-  <script src="script.js"></script>
+  <script src=" script.js"></script>
 </body>
 
 </html>
