--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> NOT NEEDED DUE TO IE NO BEING SUPPORTED-->
   <title>Custom Video Player</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="progress.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/progress.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -19,8 +19,10 @@
       <i class="fa fa-play fa-2x"></i>
     </button>
     <button class="btn" id="stop">
-      <i class="fa fa-play fa-2x"></i>
+      <i class="fa fa-stop fa-2x"></i>
     </button>
+    <input type="range" id="progress" class="progress" min="0" max="100" step="0.1" value="0.0" />
+    <span class="timestamp" id="timestamp">00:00</span>
   </div>
 
   <script src=" script.js"></script>
